Remove high contrast color override that is no longer necessary

--- a/theme/highcontrast.less
+++ b/theme/highcontrast.less
@@ -597,10 +597,6 @@
         }
         .item:focus {
             border-color: @selected !important;
-
-            span {
-                color: @HCbackground !important;
-            }
         }
     }
 
